fix the bullet now showing up