@@ -10,11 +10,11 @@ public class Sunflower extends Plant {
 
     public Sunflower(GamePanel parent, int x, int y) {
         super(parent, x, y);
-        this.setImg(new ImageIcon(this.getClass().getResource("images/plants/sunflower.gif")).getImage());
+        this.setImg(new ImageIcon(this.getClass().getResource("images/plants/sunflower.gif")));
         sunProduceTimer = new Timer(15000, (ActionEvent e) -> {
             Sun sta = new Sun(getGp(), 60 + x * 100, 110 + y * 120, 130 + y * 120);
             getGp().getActiveSuns().add(sta);
-            getGp().add(sta, new Integer(1));
+            getGp().add(sta, Integer.valueOf(1));
         });
         sunProduceTimer.start();
     }
